<resources>
    <string name="app_name">Your Organizer</string>
    <string name="books_tab">Books</string>
    <string name="series_tab">Series</string>
    <string name="films_tab">Films</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="books_tab_name">Name</string>
    <string name="books_tab_chapter">Chapter</string>
    <string name="books_tab_page">Page</string>
    <string name="books_tab_status">Status</string>
    <string name="books_addBtn">Add</string>
    <string name="books_modifyBtn">Modify</string>
    <string name="books_deleteBtn">Delete</string>
    <string name="status_completed">Completed</string>
    <string name="status_onGoing">On Going</string>
    <string name="title_activity_add_modify_book">AddModifyBook</string>
    <string name="book_NAME">NAME</string>
    <string name="book_CHAPTER">CHAPTER</string>
    <string name="book_PAGE">PAGE</string>
    <string name="book_STATUS">STATUS</string>

</resources>
